--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asynchronous-code practice</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <h1 class="title">Task №1</h1>
+    <button class="startBtn">Запустити</button>
+    <button class="endBtn">Завершити</button>
+    <div class="container">0</div>
+
+    <h1 class="title">Task №2</h1>
+    <div class="block"></div>
+
+    <h1 class="title">Task №3</h1>
+    <div class="area"></div>
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
