--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Asynchronous-code practice</title><link rel=stylesheet href=Asynchronous-code.4f00cd26.css><body>
-    <script type=module src=Asynchronous-code.eaa5aec0.js></script>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Asynchronous-code practice</title><link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&amp;family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel=stylesheet><link rel=stylesheet href=Asynchronous-code.d9f8e485.css><body>
+    <h1 class=title>Task №1</h1>
+    <button class=startBtn>Запустити</button>
+    <button class=endBtn>Завершити</button>
+    <div class=container>0</div>
+
+    <h1 class=title>Task №2</h1>
+    <div class=block></div>
+
+    <h1 class=title>Task №3</h1>
+    <div class=area></div>
+
+    <script type=module src=Asynchronous-code.78355740.js></script>
   
 
