--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,53 @@
     <h1 class="title">Task №1</h1>
     <button class="startBtn">Запустити</button>
     <button class="endBtn">Завершити</button>
-    <div class="container">0</div>
+    <div class="counter-block">0</div>
 
     <h1 class="title">Task №2</h1>
-    <div class="block"></div>
+    <div class="color-block">
+      Цей блок змінює свій фоновий колір кожні 3 секунди
+    </div>
 
     <h1 class="title">Task №3</h1>
-    <div class="area"></div>
+    <div class="text-block"></div>
+
+    <h1 class="title">Task №4</h1>
+    <div class="number-block"></div>
+
+    <h1 class="title">Task №5</h1>
+    <div class="style-block">Hello! My name is Mariya> Nice to meet you!</div>
+
+    <h1 class="title">Task №6</h1>
+    <div class="slider">
+      <img
+        class="slide"
+        src="https://i.pinimg.com/736x/2f/cf/3d/2fcf3dd485ffbed29c6b248082036cbb.jpg"
+        alt="Маяк"
+      />
+      <img
+        class="slide"
+        src="https://i.pinimg.com/1200x/39/eb/58/39eb589326c64d96a0e39626efc13cef.jpg"
+        alt="Птахи"
+      />
+      <img
+        class="slide"
+        src="https://i.pinimg.com/1200x/d0/ff/45/d0ff45a9864ffba959bcd9b73c981b48.jpg"
+        alt="Зима"
+      />
+      <img
+        class="slide"
+        src="https://i.pinimg.com/1200x/ec/e2/58/ece258d64aabec28aae0c37411b1a1b2.jpg"
+        alt="Лебеді"
+      />
+      <img
+        class="slide"
+        src="https://i.pinimg.com/1200x/7b/80/dd/7b80dd3e387b1a466ae6d764b5f1ce0b.jpg"
+        alt="Коні"
+      />
+    </div>
+
+    <h1 class="title">Task №7</h1>
+    <div class="size-block">Цей блок змінює свій розмір кожні 4 секунди</div>
 
     <script type="module" src="./index.js"></script>
   </body>
